{
  "version": 4,
  "terraform_version": "1.1.9",
  "serial": 99,
  "lineage": "9f5a50e3-4722-7f25-34ef-56fd172b0c67",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:094922031751:internet-gateway/igw-092069b29bb408eb2",
            "id": "igw-092069b29bb408eb2",
            "owner_id": "094922031751",
            "tags": {
              "Name": "Assignment_project-igw"
            },
            "tags_all": {
              "Name": "Assignment_project-igw"
            },
            "vpc_id": "vpc-0536e9f2a40a6e1a2"
          },
          "dependencies": [
            "aws_vpc.vpc01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "appln-lb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:094922031751:loadbalancer/app/appln-lb/07f019a267ec1ba9",
            "arn_suffix": "app/appln-lb/07f019a267ec1ba9",
            "desync_mitigation_mode": "defensive",
            "dns_name": "appln-lb-161152526.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_waf_fail_open": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:094922031751:loadbalancer/app/appln-lb/07f019a267ec1ba9",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "appln-lb",
            "security_groups": [
              "sg-0953e0992f41b632b"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-00e01594effa710ba"
              },
              {
                "subnet_id": "subnet-0a5b1973b50e11526"
              }
            ],
            "subnets": [
              "subnet-00e01594effa710ba",
              "subnet-0a5b1973b50e11526"
            ],
            "tags": {
              "Name": "Assignment_project-appln-lb"
            },
            "tags_all": {
              "Name": "Assignment_project-appln-lb"
            },
            "vpc_id": "vpc-0536e9f2a40a6e1a2",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "aws_lb_target_group.tg-1",
            "aws_security_group.sglb",
            "aws_subnet.pub1",
            "aws_subnet.pub2",
            "aws_vpc.vpc01",
            "data.aws_availability_zones.az"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "listner",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:094922031751:listener/app/appln-lb/07f019a267ec1ba9/f1dafc776db0d483",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [
                  {
                    "content_type": "text/plain",
                    "message_body": " Site Not Found",
                    "status_code": "200"
                  }
                ],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "",
                "type": "fixed-response"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:094922031751:listener/app/appln-lb/07f019a267ec1ba9/f1dafc776db0d483",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:094922031751:loadbalancer/app/appln-lb/07f019a267ec1ba9",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.appln-lb",
            "aws_lb_target_group.tg-1",
            "aws_security_group.sglb",
            "aws_subnet.pub1",
            "aws_subnet.pub2",
            "aws_vpc.vpc01",
            "data.aws_availability_zones.az"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener_rule",
      "name": "rule-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:094922031751:targetgroup/lb-tg-1/a5d9222547ed7337",
                "type": "forward"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:094922031751:listener-rule/app/appln-lb/07f019a267ec1ba9/f1dafc776db0d483/292b7601f174de37",
            "condition": [
              {
                "host_header": [],
                "http_header": [],
                "http_request_method": [],
                "path_pattern": [
                  {
                    "values": [
                      "/var/www/html/*"
                    ]
                  }
                ],
                "query_string": [],
                "source_ip": []
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:094922031751:listener-rule/app/appln-lb/07f019a267ec1ba9/f1dafc776db0d483/292b7601f174de37",
            "listener_arn": "arn:aws:elasticloadbalancing:us-east-1:094922031751:listener/app/appln-lb/07f019a267ec1ba9/f1dafc776db0d483",
            "priority": 100,
            "tags": null,
            "tags_all": {}
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.appln-lb",
            "aws_lb_listener.listner",
            "aws_lb_target_group.tg-1",
            "aws_security_group.sglb",
            "aws_subnet.pub1",
            "aws_subnet.pub2",
            "aws_vpc.vpc01",
            "data.aws_availability_zones.az"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener_rule",
      "name": "rule-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:094922031751:targetgroup/lb-tg-1/a5d9222547ed7337",
                "type": "forward"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:094922031751:listener-rule/app/appln-lb/07f019a267ec1ba9/f1dafc776db0d483/fb5aa3ea0a3c34a6",
            "condition": [
              {
                "host_header": [],
                "http_header": [],
                "http_request_method": [],
                "path_pattern": [
                  {
                    "values": [
                      "/var/www/html/*"
                    ]
                  }
                ],
                "query_string": [],
                "source_ip": []
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:094922031751:listener-rule/app/appln-lb/07f019a267ec1ba9/f1dafc776db0d483/fb5aa3ea0a3c34a6",
            "listener_arn": "arn:aws:elasticloadbalancing:us-east-1:094922031751:listener/app/appln-lb/07f019a267ec1ba9/f1dafc776db0d483",
            "priority": 200,
            "tags": null,
            "tags_all": {}
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.appln-lb",
            "aws_lb_listener.listner",
            "aws_lb_target_group.tg-1",
            "aws_security_group.sglb",
            "aws_subnet.pub1",
            "aws_subnet.pub2",
            "aws_vpc.vpc01",
            "data.aws_availability_zones.az"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "tg-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:094922031751:targetgroup/lb-tg-1/a5d9222547ed7337",
            "arn_suffix": "targetgroup/lb-tg-1/a5d9222547ed7337",
            "connection_termination": false,
            "deregistration_delay": "60",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:094922031751:targetgroup/lb-tg-1/a5d9222547ed7337",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "lb-tg-1",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 60,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0536e9f2a40a6e1a2"
          },
          "dependencies": [
            "aws_vpc.vpc01"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "rt_public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:094922031751:route-table/rtb-0add2a2b1b8e94dfb",
            "id": "rtb-0add2a2b1b8e94dfb",
            "owner_id": "094922031751",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-092069b29bb408eb2",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Assignment_project-public-rt"
            },
            "tags_all": {
              "Name": "Assignment_project-public-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0536e9f2a40a6e1a2"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_vpc.vpc01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_asso1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-060892681b58eaaca",
            "route_table_id": "rtb-0add2a2b1b8e94dfb",
            "subnet_id": "subnet-0a5b1973b50e11526"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.rt_public",
            "aws_subnet.pub1",
            "aws_vpc.vpc01",
            "data.aws_availability_zones.az"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_asso2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b5867de56f3ed56d",
            "route_table_id": "rtb-0add2a2b1b8e94dfb",
            "subnet_id": "subnet-00e01594effa710ba"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.rt_public",
            "aws_subnet.pub2",
            "aws_vpc.vpc01",
            "data.aws_availability_zones.az"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sglb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:094922031751:security-group/sg-0953e0992f41b632b",
            "description": "Allow 80,443,22",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0953e0992f41b632b",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTPS",
                "from_port": 443,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTPS",
                "from_port": 80,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH",
                "from_port": 22,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "sglb",
            "name_prefix": "",
            "owner_id": "094922031751",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "sglb"
            },
            "tags_all": {
              "Name": "sglb"
            },
            "timeouts": null,
            "vpc_id": "vpc-0536e9f2a40a6e1a2"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc01"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "pub1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:094922031751:subnet/subnet-0a5b1973b50e11526",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "172.31.0.0/18",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a5b1973b50e11526",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "094922031751",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Assignment_project-pub1"
            },
            "tags_all": {
              "Name": "Assignment_project-pub1"
            },
            "vpc_id": "vpc-0536e9f2a40a6e1a2"
          },
          "dependencies": [
            "aws_vpc.vpc01",
            "data.aws_availability_zones.az"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "pub2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:094922031751:subnet/subnet-00e01594effa710ba",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "172.31.64.0/18",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-00e01594effa710ba",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "094922031751",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Assignment_project-pub2"
            },
            "tags_all": {
              "Name": "Assignment_project-pub2"
            },
            "vpc_id": "vpc-0536e9f2a40a6e1a2"
          },
          "dependencies": [
            "aws_vpc.vpc01",
            "data.aws_availability_zones.az"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:094922031751:vpc/vpc-0536e9f2a40a6e1a2",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "172.31.0.0/16",
            "default_network_acl_id": "acl-0f7523f12be5c1ed5",
            "default_route_table_id": "rtb-0a11b09f7b0c6f4a2",
            "default_security_group_id": "sg-08d179533b9d0e2af",
            "dhcp_options_id": "dopt-0ac6a6f528e8cf13c",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-0536e9f2a40a6e1a2",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0a11b09f7b0c6f4a2",
            "owner_id": "094922031751",
            "tags": {
              "Name": "Assignment_project-vpc"
            },
            "tags_all": {
              "Name": "Assignment_project-vpc"
            }
          },
          "create_before_destroy": true
        }
      ]
    }
  ]
}